Fix scrollbar on page

--- a/thrimbletrimmer/src/globalStyle.scss
+++ b/thrimbletrimmer/src/globalStyle.scss
@@ -5,7 +5,6 @@ body {
 
 	background: #222;
 	color: #fff;
-	height: 100vh;
 	margin: 0;
 }
 
